# AI-First-CRM-HCP

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: hcp_assistant.py  hcp_interactions.py  health.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/versions/: 202607090001_create_hcp_interactions.py  202607100001_add_interaction_time.py
backend/app/db/repositories/: __init__.py  hcp_interaction_repository.py
backend/app/domains/hcp/models/: __init__.py  interaction.py
backend/app/domains/hcp/schemas/: __init__.py  interaction.py
backend/app/domains/hcp/services/: __init__.py  interaction_service.py
backend/app/integrations/langgraph/: graph.py  prompts.py  router.py  state.py  tools.py
backend/app/shared/exceptions/: __init__.py  base.py  handlers.py
backend/app/shared/logging/: config.py
backend/scripts/: cleanup_verification_rows.py  e2e_hcp_assistant.py  test_crud_endpoints.py  test_langgraph_agent.py  verify_db.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/features/hcp/api/: hcpAssistantApi.ts
frontend/src/features/hcp/components/: AiChatAssistant.tsx  InteractionForm.tsx
frontend/src/features/hcp/pages/: LogHcpInteractionPage.tsx
frontend/src/store/: hooks.ts  store.ts
frontend/src/styles/: global.css
frontend/src/theme/: theme.ts
(+3 files in other folders)
